# Token_Counter

./: .gitignore  README.md  build.bat  build_debug.bat  build_msi.bat  config.example.yaml  pyproject.toml  run_token_counter.py  setup_msi.py  uninstall.bat  version_info.txt
.github/workflows/: build-windows.yml
examples/: report_usage.py
src/token_counter/: __init__.py  _buildinfo.py  analytics.py  app.py  auth.py  bootstrap.py  catalog.py  config.py  defaults.py  engine.py  flap.py  fonts.py  icons.py  ledger.py  login_ui.py  logos.py  models.py  oauth.py  pricing.py  probe.py  ratelimit.py  relaunch.py  render.py  reporting.py  server.py  shortcut.py  startup.py  state.py  theme.py  tray.py  uninstall.py  viewmodel.py  webstate.py  webview_ui.py  window_ui.py
src/token_counter/assets/web/: m3.css  (+2 more)
src/token_counter/providers/: __init__.py  anthropic_admin.py  base.py  gemini.py  local_ledger.py  rate_limit.py
tests/: test_analytics.py  test_auth.py  test_bootstrap.py  test_build_version.py  test_catalog.py  test_config.py  test_engine.py  test_flap.py  test_fonts.py  test_icons.py  test_icons_status.py  test_ledger.py  test_ledger_ratelimit.py  test_ledger_samples.py  test_logos.py  test_oauth.py  test_pricing.py  test_probe.py  test_provider_rate_limit.py  test_ratelimit.py  test_relaunch.py  test_render.py  test_reporting.py  test_server.py  test_shortcut.py  test_startup.py  test_state.py  test_theme.py  test_tray.py  test_tray_reload.py  test_uninstall.py  test_viewmodel.py  test_webstate.py  test_window_round.py
tools/: fetch_logos.py  stamp_build.py
(+5 files in other folders)
