[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "token-counter"
version = "0.1.0"
description = "Live per-model token usage meter for the Windows system tray"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "shonky72" }]
dependencies = [
    "pystray>=0.19",
    "Pillow>=9.0",
    "PyYAML>=6.0",
    "keyring>=24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
token-counter = "token_counter.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
token_counter = ["assets/fonts/*.ttf", "assets/fonts/OFL.txt"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
